# video_app

./: CMakeLists.txt
include/glad/: gl.h
src/: .gitignore  main.cpp
